Mise à jour du lien "Créer un compte" pour rediriger vers le questionnaire candidat

--- a/templates/candidate-login.html
+++ b/templates/candidate-login.html
@@ -229,7 +229,7 @@
                     </div>
                     
                     <div class="register-link">
-                        <p>Vous n'avez pas de compte ? <a href="#">Créer un compte</a></p>
+                        <p>Vous n'avez pas de compte ? <a href="candidate-questionnaire.html">Créer un compte</a></p>
                     </div>
                 </div>
             </div>
