Mise à jour des liens vers la page de connexion entreprise

--- a/templates/index.html
+++ b/templates/index.html
@@ -70,7 +70,7 @@
                 <div class="btn-group">
                     <a href="candidate-login.html" class="btn btn-primary">Je suis candidat</a>
                     <a href="recruiter-login.html" class="btn">Je suis recruteur</a>
-                    <a href="client-questionnaire.html" class="btn">Je suis une entreprise</a>
+                    <a href="company-login.html" class="btn">Je suis une entreprise</a>
                 </div>
             </div>
         </div>
@@ -112,7 +112,7 @@
                         Définissez votre profil d'entreprise, vos besoins en recrutement et laissez notre IA
                         vous proposer les meilleurs talents du marché.
                     </p>
-                    <a href="client-questionnaire.html" class="user-type-btn">Créer un compte <i class="fas fa-arrow-right"></i></a>
+                    <a href="company-login.html" class="user-type-btn">Créer un compte <i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
         </div>
@@ -314,7 +314,7 @@
             <div>
                 <a href="candidate-questionnaire.html" class="btn btn-primary">Je suis candidat</a>
                 <a href="recruiter-questionnaire.html" class="btn">Je suis recruteur</a>
-                <a href="client-questionnaire.html" class="btn">Je suis une entreprise</a>
+                <a href="company-login.html" class="btn">Je suis une entreprise</a>
             </div>
         </div>
     </section>
